namespace TodoManagementApp.Domain.Enums
{
    public enum TodoStatus
    {
        Active,
        InProgress,
        Done,
        Cancelled,
        Terminated
    }
}
